2007-09-12  Michael Natterer  <mitch@gimp.org>

	* libgimpwidgets/gimpunitmenu.c (gimp_unit_menu_create_selection):
	if the parent toplevel is modal, make the unit selection dialog
	modal too. Fixes bug #389358.

2007-09-12  Sven Neumann  <sven@gimp.org>

	* app/base/tile.c (tile_data_pointer): use the offsets module
	TILE_WIDTH and TILE_HEIGHT instead of doing the modulo operation
	in each and every caller.

	* app/base/boundary.c
	* app/base/pixel-region.c
	* app/base/tile-manager.c
	* app/core/gimpchannel.c
	* app/core/gimpdrawable-blend.c
	* app/core/gimpdrawable.c
	* app/core/gimpimage-contiguous-region.c
	* app/core/gimplayer.c
	* app/display/gimpdisplayshell-render.c
	* app/paint-funcs/paint-funcs.c
	* app/paint/gimppaintcore.c
	* app/tools/gimpiscissorstool.c: changed accordingly.

2007-09-12  Sven Neumann  <sven@gimp.org>

	* app/core/gimp-transform-region.c (supersample_dtest): use
	G_SQRT2 instead of defining this constant again.

2007-09-12  Michael Natterer  <mitch@gimp.org>

	Bring back our menus when building on OS X but not against the
	quartz GDK backend:

	* configure.in: added conditional HAVE_GDK_QUARTZ.

	* menus/Makefile.am: use it when moving the help menu around.

	* app/dialogs/preferences-dialog.c
	* app/display/gimpdisplayshell.c
	* app/gui/gtk-macmenu.c
	* app/gui/gui.c
	* app/widgets/gimptoolbox.c: use #ifdef GDK_WINDOWING_QUARTZ
	instead of #ifdef HAVE_CARBON when enabling the global menubar.

2007-09-12  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpcolorprofilecombobox.c
	(gimp_color_profile_combo_box_new): fixed reference count of the
	profile store.

2007-09-12  Øyvind Kolås  <pippin@gimp.org>

	* app/core/gimp-transform-region.c: (supersample_dtest): do not invoke
	supersampling for linear, bicubic and lanczos until the largest
	horizontal/vertical difference between transformed pixel corners goes
	above sqrt(2) (this ensures interpolation instead of supersampling is
	used for rotation.)
