@@ -1,3 +1,10 @@
+2007-09-12  Øyvind Kolås  <pippin@gimp.org>
+
+	* app/display/gimpdisplayshell-render.c: (render_image_tile_fault),
+	(render_image_tile_fault_one_row): clone the middle row/column when
+	walking off the source drawable during downscaling. Probably fixes bug
+	#469567.
+
 2007-09-12  Michael Natterer  <mitch@gimp.org>
 
 	* libgimpwidgets/gimpunitmenu.c (gimp_unit_menu_create_selection):
